Algúna documentación para scribe y comienzo de nuevo generador de documentación: Swagger
