# app/Http/Controllers/Api/CategoryController.php
@@ -8,10 +8,19 @@ use App\Http\Resources\CategoryResource;
 use App\Models\Category;
 use Illuminate\Http\Request;
 use Illuminate\Support\Str;
+use Knuckles\Scribe\Attributes\Endpoint;
+use Knuckles\Scribe\Attributes\Group;
 use Symfony\Component\HttpFoundation\Response;
 
+#[Group('Categories', description: 'Managing categories')]
+#[Endpoint('page', 'int', 'The page number')]
 class CategoryController extends Controller
 {
+    /**
+     * Get all categories
+     *
+     * Getting the list od the categories
+     */
     public function index()
     {
         abort_if(!auth()->user()->tokenCan('categories-list'), 403);
@@ -19,6 +28,7 @@ class CategoryController extends Controller
         return CategoryResource::collection(Category::all());
     }
 
+    #[Endpoint('Show category', description: 'Get a category by ID')]
     public function show(Category $category)
     {
         abort_if(!auth()->user()->tokenCan('categories-show'), 403);
@@ -26,6 +36,12 @@ class CategoryController extends Controller
         return new CategoryResource($category);
     }
 
+//    #[Endpoint('store', description: 'Store a new category')]
+
+    /**
+     * @param StoreCategoryRequest $request
+     * @return CategoryResource
+     */
     public function store(StoreCategoryRequest $request)
     {
         $data = $request->all();
