# public/docs/openapi.yaml
@@ -7,28 +7,6 @@ servers:
   -
     url: 'http://apit.test'
 paths:
-  /api/user:
-    get:
-      summary: ''
-      operationId: getApiUser
-      description: ''
-      parameters: []
-      responses:
-        401:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
-      tags:
-        - Endpoints
-      security: []
   /api/lists/categories:
     get:
       summary: ''
@@ -118,13 +96,13 @@ paths:
                           type: string
                           example: 'ad qui earum'
       tags:
-        - Endpoints
+        - Categories
       security: []
   /api/categories:
     get:
-      summary: ''
-      operationId: getApiCategories
-      description: ''
+      summary: 'Get all categories'
+      operationId: getAllCategories
+      description: 'Getting the list od the categories'
       parameters: []
       responses:
         401:
@@ -140,7 +118,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
+        - Categories
       security: []
     post:
       summary: ''
@@ -149,7 +127,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -160,16 +138,16 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: laborum
+                  example: dolore
                   nullable: false
               required:
                 - name
       security: []
   '/api/categories/{id}':
     get:
-      summary: ''
-      operationId: getApiCategoriesId
-      description: ''
+      summary: 'Show category'
+      operationId: showCategory
+      description: 'Get a category by ID'
       parameters: []
       responses:
         401:
@@ -185,7 +163,7 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
+        - Categories
       security: []
     put:
       summary: ''
@@ -194,7 +172,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       requestBody:
         required: true
         content:
@@ -205,7 +183,7 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: eaque
+                  example: illo
                   nullable: false
               required:
                 - name
@@ -217,7 +195,7 @@ paths:
       parameters: []
       responses: {  }
       tags:
-        - Endpoints
+        - Categories
       security: []
     parameters:
       -
@@ -228,6 +206,28 @@ paths:
         required: true
         schema:
           type: integer
+  /api/user:
+    get:
+      summary: ''
+      operationId: getApiUser
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
   /api/products:
     get:
       summary: ''
@@ -248,9 +248,15 @@ paths:
                     type: string
                     example: Unauthenticated.
       tags:
-        - Endpoints
+        - Products
       security: []
 tags:
   -
+    name: Categories
+    description: "\nManaging categories"
+  -
     name: Endpoints
     description: ''
+  -
+    name: Products
+    description: "\nManaging products"
